--- a/app/globals.css
+++ b/app/globals.css
@@ -166,3 +166,18 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  textarea:-webkit-autofill,
+  textarea:-webkit-autofill:hover,
+  textarea:-webkit-autofill:focus,
+  select:-webkit-autofill,
+  select:-webkit-autofill:hover,
+  select:-webkit-autofill:focus {
+    @apply bg-transparent text-white; /* or text-black depending on your theme */
+    transition: background-color 9999s ease-in-out 0s;
+  }
+}
