--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,8 @@
 /* @custom-variant dark (&:is(.dark *)); */
 
 :root {
-  --dialog-color: #1c1c1e;
+  --dialog-color: #171717;
+  --dialog-s-color: #28282a;
   --mn-color: #1c1c1e00;
   --primary-p-color: #36f8050c;
   --secondary-p-color: #05dcf809;
@@ -60,6 +61,7 @@
 }
 
 @theme inline {
+  --color-dsc: var(--dialog-s-color)
   --color-mn: var(--mn-color);
   --color-dialog-color: var(--dialog-color);
   --color-pp-c: var(--primary-p-color);
