--- a/util/components/map/index.css
+++ b/util/components/map/index.css
@@ -14,6 +14,6 @@
     -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
     -webkit-text-fill-color: white !important;
     -webkit-text-stroke-color: white !important;
-    transition: background-color 9999s ease-in-out 0s !important;
+    transition: all 9999s ease-in-out 0s !important;
   }
 }
